tests/suite/snapshots/suite__parse__tests__parse__length03_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/length03_2.xi:2:3]
   │
 2 │   length(a)
   ·   ───┬──  
   ·      ╰──── Unexpected token
───╯

